--- a/.env.docker
+++ b/.env.docker
@@ -1,3 +1,3 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY=${OPENAI_API_KEY}
 OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
-HUGGINGFACE_HUB_TOKEN=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
+HUGGINGFACE_HUB_TOKEN=${HF_TOKEN}
